test/spec_vectors/store/fail/module_53.wat
(module (memory 1) (func (i64.store (i32.const 0) (f32.const 0))))